<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="text"
        android:textColorHint="#8C8C8C"
        android:text=""
        android:textSize="24sp"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="120dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_name"
        android:inputType="text"
        android:text=""
        android:textColorHint="#8C8C8C"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:onClick="updates"
        android:text="@string/button_update"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:onClick="delete"
        android:text="@string/button_delete"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="text"
        android:textColorHint="#8C8C8C"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="44dp"
        android:text="@string/txt_profile"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:contentDescription="TODO"
        android:onClick="logout"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>